processed/gerrit/txt_full/36618.txt
Change:     36618
Subject:    LU-12756 lnet: Fix src spec route selection
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36618
Change-Id:  Ie02b11405efd0824485fb4fc3322b785f90f11ed
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Chris Horn
Created:    2019-10-31 00:53:45.000000000
Updated:    2019-10-31 01:39:16.000000000
Patch Set:  3
Insertions: +57
Deletions:  -49
Comments:   6 (0 unresolved)

--- Commit Message ---
LU-12756 lnet: Fix src spec route selection

This commit is for discussion of the fix.

Test-Parameters: forbuildonly
Signed-off-by: Chris Horn <hornc@cray.com>
Change-Id: Ie02b11405efd0824485fb4fc3322b785f90f11ed

--- Review History ---

--- Message (Chris Horn, 2019-10-31 00:53:45.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-10-31 00:55:29.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lnet/lnet/lib-move.c: In function ‘lnet_find_route_locked’:
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1497:2: error: large integer implicitly truncated to unsigned type [-Werror=overflow]
   __u32 local_lnet = LNET_NID_ANY;
   ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1507:6: error: ‘sd’ undeclared (first use in this function)
   if (sd->sd_best_ni)
       ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1507:6: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1525:9: error: passing argument 2 of ‘lnet_find_best_lpni_on_net’ makes pointer from integer without a cast [-Werror]
          l_lnet);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1440:1: note: expected ‘struct lnet_peer *’ but argument is of type ‘long long unsigned int’
  lnet_find_best_lpni_on_net(struct lnet_send_data *sd, struct lnet_peer *peer,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1525:9: error: passing argument 3 of ‘lnet_find_best_lpni_on_net’ makes integer from pointer without a cast [-Werror]
          l_lnet);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1440:1: note: expected ‘__u32’ but argument is of type ‘struct lnet_peer *’
  lnet_find_best_lpni_on_net(struct lnet_send_data *sd, struct lnet_peer *peer,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1525:9: error: too many arguments to function ‘lnet_find_best_lpni_on_net’
          l_lnet);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1440:1: note: declared here
  lnet_find_best_lpni_on_net(struct lnet_send_data *sd, struct lnet_peer *peer,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1538:28: error: ‘l_net’ undeclared (first use in this function)
          route->lr_gateway, l_net);
                             ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1538:9: error: passing argument 2 of ‘lnet_find_best_lpni_on_net’ makes pointer from integer without a cast [-Werror]
          route->lr_gateway, l_net);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1440:1: note: expected ‘struct lnet_peer *’ but argument is of type ‘long long unsigned int’
  lnet_find_best_lpni_on_net(struct lnet_send_data *sd, struct lnet_peer *peer,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1538:9: error: passing argument 3 of ‘lnet_find_best_lpni_on_net’ makes integer from pointer without a cast [-Werror]
          route->lr_gateway, l_net);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1440:1: note: expected ‘__u32’ but argument is of type ‘struct lnet_peer *’
  lnet_find_best_lpni_on_net(struct lnet_send_data *sd, struct lnet_peer *peer,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1538:9: error: too many arguments to function ‘lnet_find_best_lpni_on_net’
          route->lr_gateway, l_net);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1440:1: note: declared here
  lnet_find_best_lpni_on_net(struct lnet_send_data *sd, struct lnet_peer *peer,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Lustre Gerrit Janitor, 2019-10-31 00:56:21.000000000) ---
Patch Set 1:

centos7: Compile failed

rhel8.0: Compile failed


 Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/4118/results.html

--- Message (wc-checkpatch, 2019-10-31 00:57:24.000000000) ---
Patch Set 1:

(2 comments)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Chris Horn, 2019-10-31 01:05:02.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2019-10-31 01:05:07.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/69369/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews-patchless/9581/ : ABORTED

--- Message (wc-checkpatch, 2019-10-31 01:07:45.000000000) ---
Patch Set 2:

(2 comments)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-10-31 01:07:57.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lnet/lnet/lib-move.c: In function ‘lnet_find_route_locked’:
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1541:9: error: ‘l_net’ undeclared (first use in this function)
          l_net);
          ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1541:9: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lnet/lnet/lib-move.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Chris Horn, 2019-10-31 01:08:31.000000000) ---
Uploaded patch set 3.

--- Message (jenkins, 2019-10-31 01:08:32.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/69371/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews-patchless/9583/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2019-10-31 01:09:10.000000000) ---
Patch Set 2:

Newer revision detected, aborting all work on revision 2

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-10-31 01:11:08.000000000) ---
Patch Set 3:

Cannot build patch due to 14, messages:

  In file included from /home/green/git/lustre-release/libcfs/include/libcfs/libcfs.h:45:0,
                  from /home/green/git/lustre-release/lnet/include/lnet/lib-lnet.h:45,
                  from /home/green/git/lustre-release/lnet/lnet/lib-move.c:41:
 /home/green/git/lustre-release/lnet/lnet/lib-move.c: In function ‘lnet_find_route_locked’:
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1545:26: error: ‘l_net’ undeclared (first use in this function)
            libcfs_net2str(l_net));
                           ^
 /home/green/git/lustre-release/libcfs/include/libcfs/libcfs_debug.h:166:41: note: in definition of macro ‘__CDEBUG_WITH_LOC’
    libcfs_debug_msg(&msgdata, format, ## __VA_ARGS__); \
                                          ^
 /home/green/git/lustre-release/libcfs/include/libcfs/libcfs_debug.h:200:37: note: in expansion of macro ‘CDEBUG_LIMIT’
  #define CERROR(format, ...)         CDEBUG_LIMIT(D_ERROR, format, ## __VA_ARGS__)
                                      ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1543:4: note: in expansion of macro ‘CERROR’
     CERROR("Gateway %s does not have a peer NI on net %s\n",
     ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1545:26: note: each undeclared identifier is reported only once for each function it appears in
            libcfs_net2str(l_net));
                           ^
 /home/green/git/lustre-release/libcfs/include/libcfs/libcfs_debug.h:166:41: note: in definition of macro ‘__CDEBUG_WITH_LOC’
    libcfs_debug_msg(&msgdata, format, ## __VA_ARGS__); \
                                          ^
 /home/green/git/lustre-release/libcfs/include/libcfs/libcfs_debug.h:200:37: note: in expansion of macro ‘CDEBUG_LIMIT’
  #define CERROR(format, ...)         CDEBUG_LIMIT(D_ERROR, format, ## __VA_ARGS__)
                                      ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1543:4: note: in expansion of macro ‘CERROR’
     CERROR("Gateway %s does not have a peer NI on net %s\n",
     ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Lustre Gerrit Janitor, 2019-10-31 01:12:05.000000000) ---
Patch Set 3:

centos7: Compile failed

rhel8.0: Compile failed


 Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/4121/results.html

--- Message (wc-checkpatch, 2019-10-31 01:12:55.000000000) ---
Patch Set 3:

(2 comments)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Chris Horn, 2019-10-31 01:35:57.000000000) ---
Abandoned

--- Message (jenkins, 2019-10-31 01:39:16.000000000) ---
Patch Set 3:

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/69372/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews-patchless/9584/ : FAILURE
